--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,9 +10,10 @@
     <meta name="author" content="Sanbingduizhang">
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <link rel='shortcut icon' href='/favicon.ico'>
-    <link type="text/css" rel="styleSheet"  href="/static/common/css/common.css" />
-    <title>少年的故事</title>
+    <link type="text/css" rel="styleSheet" href="/static/common/css/common.css" />
+    <title>遇见过往</title>
 </head>
+
 <body>
     <div id="box">
         <!-- 首页 -->
@@ -23,10 +25,35 @@
         <div id="buttom"></div>
 
     </div>
+    <div id="bgsub">
+        <div class="sub-index">
+            <div class="sub-head">遇 见 过 往</div>
+            <div class="sub-mid">
+                <p>
+                    <span>账号</span>
+                    <span>
+                        <input type="text" name="" id="username" class="inputsub">
+                    </span>
+                </p>
+                <p>
+                    <span>密码</span>
+                    <span>
+                        <input type="text" name="" id="password" class="inputsub">
+                    </span>
+                </p>
+            </div>
+            <div class="sub-bottom">
+                <p class="submitgo">立即登录</p>
+                <p class="submitfog">忘记密码</p>
+            </div>
+
+        </div>
+    </div>
 </body>
+
 </html>
 <script src="/static/jquery-1.12.4.js"></script>
 <script src="/static/common/js/common.js"></script>
 <script>
-    
+
 </script>
