主页面写好

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta http-equiv="Access-Control-Allow-Origin" content="*">
     <link rel='shortcut icon' href='/favicon.ico'>
     <link type="text/css" rel="styleSheet" href="/static/common/css/common.css" />
+    <link type="text/css" rel="styleSheet" href="/static/pagination.css" />
+    <link type="text/css" rel="styleSheet" href="/static/home/css/index.css" />
     <title>遇见过往</title>
 </head>
 
@@ -20,13 +22,195 @@
         <div id="top"></div>
         <!-- 主要内容 -->
         <div id="mid">
+            <div class="content">
+                <div class="con-left-duo">
+                    <div class="con-left">
+                        <div class="con-left-con">
+                            <div class="suoshu">
+                                <span>小茶</span>
+                                <span>2018-05-03 22:22:22</span>
+                            </div>
+                            <div class="zhucon">
+                                这里是文字记录的主要内容
+                            </div>
+                            <div class="other">
+                                <span>分类:红袖添香</span>
+                                <span>点赞(100)</span>
+                                <span>评论(100)</span>
+                            </div>
+                        </div>
+                        <div class="con-left-con">
+                            <div class="suoshu">
+                                <span>小茶</span>
+                                <span>2018-05-03 22:22:22</span>
+                            </div>
+                            <div class="zhucon">
+                                这里是文字记录的主要内容
+                            </div>
+                            <div class="other">
+                                <span>分类:红袖添香</span>
+                                <span>点赞(100)</span>
+                                <span>评论(100)</span>
+                            </div>
+                        </div>
+                        <div class="con-left-con">
+                            <div class="suoshu">
+                                <span>小茶</span>
+                                <span>2018-05-03 22:22:22</span>
+                            </div>
+                            <div class="zhucon">
+                                这里是文字记录的主要内容
+                            </div>
+                            <div class="other">
+                                <span>分类:红袖添香</span>
+                                <span>点赞(100)</span>
+                                <span>评论(100)</span>
+                            </div>
+                        </div>
+                        <div class="con-left-con">
+                            <div class="suoshu">
+                                <span>小茶</span>
+                                <span>2018-05-03 22:22:22</span>
+                            </div>
+                            <div class="zhucon">
+                                这里是文字记录的主要内容
+                            </div>
+                            <div class="other">
+                                <span>分类:红袖添香</span>
+                                <span>点赞(100)</span>
+                                <span>评论(100)</span>
+                            </div>
+                        </div>
+                        <div class="con-left-con">
+                            <div class="suoshu">
+                                <span>小茶</span>
+                                <span>2018-05-03 22:22:22</span>
+                            </div>
+                            <div class="zhucon">
+                                这里是文字记录的主要内容
+                            </div>
+                            <div class="other">
+                                <span>分类:红袖添香</span>
+                                <span>点赞(100)</span>
+                                <span>评论(100)</span>
+                            </div>
+                        </div>
+                        <div class="con-left-con">
+                            <div class="suoshu">
+                                <span>小茶</span>
+                                <span>2018-05-03 22:22:22</span>
+                            </div>
+                            <div class="zhucon">
+                                这里是文字记录的主要内容
+                            </div>
+                            <div class="other">
+                                <span>分类:红袖添香</span>
+                                <span>点赞(100)</span>
+                                <span>评论(100)</span>
+                            </div>
+                        </div>
+                        <div class="con-left-con">
+                            <div class="suoshu">
+                                <span>小茶</span>
+                                <span>2018-05-03 22:22:22</span>
+                            </div>
+                            <div class="zhucon">
+                                这里是文字记录的主要内容
+                            </div>
+                            <div class="other">
+                                <span>分类:红袖添香</span>
+                                <span>点赞(100)</span>
+                                <span>评论(100)</span>
+                            </div>
+                        </div>
+                        <div class="con-left-con">
+                            <div class="suoshu">
+                                <span>小茶</span>
+                                <span>2018-05-03 22:22:22</span>
+                            </div>
+                            <div class="zhucon">
+                                这里是文字记录的主要内容
+                            </div>
+                            <div class="other">
+                                <span>分类:红袖添香</span>
+                                <span>点赞(100)</span>
+                                <span>评论(100)</span>
+                            </div>
+                        </div>
+                        <div class="con-left-con">
+                            <div class="suoshu">
+                                <span>小茶</span>
+                                <span>2018-05-03 22:22:22</span>
+                            </div>
+                            <div class="zhucon">
+                                这里是文字记录的主要内容
+                            </div>
+                            <div class="other">
+                                <span>分类:红袖添香</span>
+                                <span>点赞(100)</span>
+                                <span>评论(100)</span>
+                            </div>
+                        </div>
+                        <div class="con-left-con">
+                            <div class="suoshu">
+                                <span>小茶</span>
+                                <span>2018-05-03 22:22:22</span>
+                            </div>
+                            <div class="zhucon">
+                                这里是文字记录的主要内容
+                            </div>
+                            <div class="other">
+                                <span>分类:红袖添香</span>
+                                <span>点赞(100)</span>
+                                <span>评论(100)</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="M-box1 m-style">
+                    </div>
+                </div>
+                <div class="con-right">
+                    <div class="con-right-con">
+                        <div class="con-right-latest con-right-css">
+                            <div class="con-right-all">
+                                <div class="con-right-tou"><span>最新的记忆>>></span></div>
+                                <div class="con-right-nr">
+                                    <p><span>这是最新的里面所暗藏的...</span></p>
+                                    <p><span>dfddfsdf</span></p>
+                                    <p><span>dfddfsdf</span></p>
+                                    <p><span>dfddfsdf</span></p>
+                                    <p><span>dfddfsdf</span></p>
+                                    <p><span>dfddfsdf</span></p>
+                                </div>
+                            </div>
+
+                        </div>
+                        <div class="con-right-hottest con-right-css">
+                            <div class="con-right-all">
+                                <div class="con-right-tou"><span>最热的记忆>>></span></div>
+                                <div class="con-right-nr">
+                                    <p><span>dfddfsdf</span></p>
+                                    <p><span>dfddfsdf</span></p>
+                                    <p><span>dfddfsdf</span></p>
+                                    <p><span>dfddfsdf</span></p>
+                                    <p><span>dfddfsdf</span></p>
+                                    <p><span>dfddfsdf</span></p>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <!-- 底部 -->
         <div id="buttom"></div>
 
     </div>
     <div id="bgsub">
+
         <div class="sub-index">
+            <div class="button-close">关闭</div>
             <div class="sub-head">遇 见 过 往</div>
             <div class="sub-mid">
                 <p>
@@ -54,6 +238,8 @@
 </html>
 <script src="/static/jquery-1.12.4.js"></script>
 <script src="/static/common/js/common.js"></script>
+<script src="/static/jquery.pagination.js"></script>
+<script src="/static/home/js/index.js"></script>
 <script>
 
 </script>
