完善首页显示

--- a/head.html
+++ b/head.html
@@ -6,7 +6,7 @@
             <li><a href="javascript:void(0);">古道人家</a></li>
             <li><a href="javascript:void(0);">古道人家</a></li>
             <li><a href="javascript:void(0);">古道人家</a></li>
-            <li><a href="javascript:void(0);">古道人家</a></li>
+            <li><a href="javascript:void(0);">人家</a></li>
         </ul>
     </div>
     <div class='header-right'>
