--- a/index.html
+++ b/index.html
@@ -27,142 +27,162 @@
                     <div class="con-left">
                         <div class="con-left-con">
                             <div class="suoshu">
-                                <span>小茶</span>
-                                <span>2018-05-03 22:22:22</span>
+                                <span>小茶&nbsp;&nbsp;</span>
+                                <span>&nbsp;&nbsp;2018-05-03 22:22:22</span>
                             </div>
                             <div class="zhucon">
-                                这里是文字记录的主要内容
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这里是文字记录的主要内容大撒大撒大苏打倒萨大大加快大厦抠脚大汉洒家扩大红军撒谎的艰苦撒旦户籍卡说的话氨基酸看到哈师大京卡是大戟科撒谎就大开杀戒看到啥健康的很快就安居客啥叫杀手锏的打实打实大苏打实打实大苏打发...
                             </div>
                             <div class="other">
-                                <span>分类:红袖添香</span>
-                                <span>点赞(100)</span>
-                                <span>评论(100)</span>
+                                <p>分类:红袖添香</p>
+                                <p>
+                                    <span>点赞(100)&nbsp;&nbsp;</span>
+                                    <span>&nbsp;&nbsp;评论(100)</span>
+                                </p>
                             </div>
                         </div>
                         <div class="con-left-con">
                             <div class="suoshu">
-                                <span>小茶</span>
-                                <span>2018-05-03 22:22:22</span>
+                                <span>小茶&nbsp;&nbsp;</span>
+                                <span>&nbsp;&nbsp;2018-05-03 22:22:22</span>
                             </div>
                             <div class="zhucon">
-                                这里是文字记录的主要内容
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这里是文字记录的主要内容大撒大撒大苏打倒萨大大加快大厦抠脚大汉洒家扩大红军撒谎的艰苦撒旦户籍卡说的话氨基酸看到哈师大京卡是大戟科撒谎就大开杀戒看到啥健康的很快就安居客啥叫杀手锏的打实打实大苏打实打实大苏打发...
                             </div>
                             <div class="other">
-                                <span>分类:红袖添香</span>
-                                <span>点赞(100)</span>
-                                <span>评论(100)</span>
+                                <p>分类:红袖添香</p>
+                                <p>
+                                    <span>点赞(100)&nbsp;&nbsp;</span>
+                                    <span>&nbsp;&nbsp;评论(100)</span>
+                                </p>
                             </div>
                         </div>
                         <div class="con-left-con">
                             <div class="suoshu">
-                                <span>小茶</span>
-                                <span>2018-05-03 22:22:22</span>
+                                <span>小茶&nbsp;&nbsp;</span>
+                                <span>&nbsp;&nbsp;2018-05-03 22:22:22</span>
                             </div>
                             <div class="zhucon">
-                                这里是文字记录的主要内容
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这里是文字记录的主要内容大撒大撒大苏打倒萨大大加快大厦抠脚大汉洒家扩大红军撒谎的艰苦撒旦户籍卡说的话氨基酸看到哈师大京卡是大戟科叫杀手锏的打实打实大苏打实打实大苏打发...
                             </div>
                             <div class="other">
-                                <span>分类:红袖添香</span>
-                                <span>点赞(100)</span>
-                                <span>评论(100)</span>
+                                <p>分类:红袖添香</p>
+                                <p>
+                                    <span>点赞(100)&nbsp;&nbsp;</span>
+                                    <span>&nbsp;&nbsp;评论(100)</span>
+                                </p>
                             </div>
                         </div>
                         <div class="con-left-con">
                             <div class="suoshu">
-                                <span>小茶</span>
-                                <span>2018-05-03 22:22:22</span>
+                                <span>小茶&nbsp;&nbsp;</span>
+                                <span>&nbsp;&nbsp;2018-05-03 22:22:22</span>
                             </div>
                             <div class="zhucon">
-                                这里是文字记录的主要内容
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这里是文快就安居客啥叫杀手锏的打实打实大苏打实打实大苏打发...
                             </div>
                             <div class="other">
-                                <span>分类:红袖添香</span>
-                                <span>点赞(100)</span>
-                                <span>评论(100)</span>
+                                <p>分类:红袖添香</p>
+                                <p>
+                                    <span>点赞(100)&nbsp;&nbsp;</span>
+                                    <span>&nbsp;&nbsp;评论(100)</span>
+                                </p>
                             </div>
                         </div>
                         <div class="con-left-con">
                             <div class="suoshu">
-                                <span>小茶</span>
-                                <span>2018-05-03 22:22:22</span>
+                                <span>小茶&nbsp;&nbsp;</span>
+                                <span>&nbsp;&nbsp;2018-05-03 22:22:22</span>
                             </div>
                             <div class="zhucon">
-                                这里是文字记录的主要内容
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这里是文字记录的主要内容大撒大撒大苏打倒萨大大加快大厦抠脚大汉洒家扩大红军撒谎的艰苦撒旦户籍卡说的话氨基酸看到哈师大京卡是大戟科撒谎就
                             </div>
                             <div class="other">
-                                <span>分类:红袖添香</span>
-                                <span>点赞(100)</span>
-                                <span>评论(100)</span>
+                                <p>分类:红袖添香</p>
+                                <p>
+                                    <span>点赞(100)&nbsp;&nbsp;</span>
+                                    <span>&nbsp;&nbsp;评论(100)</span>
+                                </p>
                             </div>
                         </div>
                         <div class="con-left-con">
                             <div class="suoshu">
-                                <span>小茶</span>
-                                <span>2018-05-03 22:22:22</span>
+                                <span>小茶&nbsp;&nbsp;</span>
+                                <span>&nbsp;&nbsp;2018-05-03 22:22:22</span>
                             </div>
                             <div class="zhucon">
-                                这里是文字记录的主要内容
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这里是文字记录到啥健康的很快就安居客啥叫杀手锏的打实打实大苏打实打实大苏打发...
                             </div>
                             <div class="other">
-                                <span>分类:红袖添香</span>
-                                <span>点赞(100)</span>
-                                <span>评论(100)</span>
+                                <p>分类:红袖添香</p>
+                                <p>
+                                    <span>点赞(100)&nbsp;&nbsp;</span>
+                                    <span>&nbsp;&nbsp;评论(100)</span>
+                                </p>
                             </div>
                         </div>
                         <div class="con-left-con">
                             <div class="suoshu">
-                                <span>小茶</span>
-                                <span>2018-05-03 22:22:22</span>
+                                <span>小茶&nbsp;&nbsp;</span>
+                                <span>&nbsp;&nbsp;2018-05-03 22:22:22</span>
                             </div>
                             <div class="zhucon">
-                                这里是文字记录的主要内容
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这里是杀戒看到啥健康的很快就安居客啥叫杀手锏的打实打实大苏打实打实大苏打发...
                             </div>
                             <div class="other">
-                                <span>分类:红袖添香</span>
-                                <span>点赞(100)</span>
-                                <span>评论(100)</span>
+                                <p>分类:红袖添香</p>
+                                <p>
+                                    <span>点赞(100)&nbsp;&nbsp;</span>
+                                    <span>&nbsp;&nbsp;评论(100)</span>
+                                </p>
                             </div>
                         </div>
                         <div class="con-left-con">
                             <div class="suoshu">
-                                <span>小茶</span>
-                                <span>2018-05-03 22:22:22</span>
+                                <span>小茶&nbsp;&nbsp;</span>
+                                <span>&nbsp;&nbsp;2018-05-03 22:22:22</span>
                             </div>
                             <div class="zhucon">
-                                这里是文字记录的主要内容
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这里是文字大开杀戒看到啥健康的很快就安居客啥叫杀手锏的打实打实大苏打实打实大苏打发...
                             </div>
                             <div class="other">
-                                <span>分类:红袖添香</span>
-                                <span>点赞(100)</span>
-                                <span>评论(100)</span>
+                                <p>分类:红袖添香</p>
+                                <p>
+                                    <span>点赞(100)&nbsp;&nbsp;</span>
+                                    <span>&nbsp;&nbsp;评论(100)</span>
+                                </p>
                             </div>
                         </div>
                         <div class="con-left-con">
                             <div class="suoshu">
-                                <span>小茶</span>
-                                <span>2018-05-03 22:22:22</span>
+                                <span>小茶&nbsp;&nbsp;</span>
+                                <span>&nbsp;&nbsp;2018-05-03 22:22:22</span>
                             </div>
                             <div class="zhucon">
-                                这里是文字记录的主要内容
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这里是文字记录的主要内容大撒大撒大苏打倒萨大大加快大厦抠脚大汉洒家扩大红军撒谎的艰苦撒旦户籍卡说的话氨基酸看到哈师大京卡是大戟科撒谎就大开杀戒看到啥健康的很快就安居客啥叫杀手锏的打实打实大苏打实打实大苏打发...
                             </div>
                             <div class="other">
-                                <span>分类:红袖添香</span>
-                                <span>点赞(100)</span>
-                                <span>评论(100)</span>
+                                <p>分类:红袖添香</p>
+                                <p>
+                                    <span>点赞(100)&nbsp;&nbsp;</span>
+                                    <span>&nbsp;&nbsp;评论(100)</span>
+                                </p>
                             </div>
                         </div>
                         <div class="con-left-con">
                             <div class="suoshu">
-                                <span>小茶</span>
-                                <span>2018-05-03 22:22:22</span>
+                                <span>小茶&nbsp;&nbsp;</span>
+                                <span>&nbsp;&nbsp;2018-05-03 22:22:22</span>
                             </div>
                             <div class="zhucon">
-                                这里是文字记录的主要内容
+                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这里是文字大大加快大厦抠脚大汉洒家扩大红军撒谎的艰苦撒旦户籍卡说的话氨基酸看到哈师大京卡是大戟科撒谎就大开杀戒看到啥健康的很快就安居客啥叫杀手锏的打实打实大苏打实打实大苏打发...
                             </div>
                             <div class="other">
-                                <span>分类:红袖添香</span>
-                                <span>点赞(100)</span>
-                                <span>评论(100)</span>
+                                <p>分类:红袖添香</p>
+                                <p>
+                                    <span>点赞(100)&nbsp;&nbsp;</span>
+                                    <span>&nbsp;&nbsp;评论(100)</span>
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -171,6 +191,14 @@
                 </div>
                 <div class="con-right">
                     <div class="con-right-con">
+                        <div class="con-right-edit">
+                            <p>
+                                <textarea class="inputmind" style="resize:none;" placeholder="最多可输入100字"></textarea>
+                            </p>
+                            <p>
+                                <div class="pubtext">发表</div>
+                            </p>
+                        </div>
                         <div class="con-right-latest con-right-css">
                             <div class="con-right-all">
                                 <div class="con-right-tou"><span>最新的记忆>>></span></div>
@@ -208,7 +236,6 @@
 
     </div>
     <div id="bgsub">
-
         <div class="sub-index">
             <div class="button-close">关闭</div>
             <div class="sub-head">遇 见 过 往</div>
