--- a/head.html
+++ b/head.html
@@ -35,7 +35,7 @@
 <script>
     //头像下方显示内容的转换
     var realToken = getRealToken();
-    if (realToken == null || realToken == '') {
+    if (realToken == undefined || realToken == '') {
         $(".imghead").attr("isClick", "false");
     } else {
         $(".imghead").attr("isClick", "true");
@@ -79,31 +79,31 @@
         // }
         //发送登录请求
         $.ajax({
-            type:"POST",
-            url:getBaseUri() + "base/login",
-            dataType:"json",
-            data:{
-                usercode:user,
-                password:pwd,
+            type: "POST",
+            url: getBaseUri() + "base/login",
+            dataType: "json",
+            data: {
+                usercode: user,
+                password: pwd,
             },
-            success:function (data) {
+            success: function (data) {
                 if (data.code == 1) {
-                    localStorage.setItem('real-home-token', data.data.token);
-                    sessionStorage.setItem('real-home-token', data.data.token);
-                    // window.location.reload();
+                    $.cookie('real-home-token',data.data.token);
                     $("#top").load("head.html");
                     $("#bgsub").hide();
                 } else {
                     alert(data.message);
                 }
             },
-            error:function (data) {
+            error: function (data) {
                 console.log(data);
             }
         });
-        
-
-
-
+    });
+    //退出事件
+    $(".loginOut").click(function() {
+        $.cookie('real-home-token','');
+        $("#top").load("head.html");
+        alert('退出成功');
     });
 </script>
