--- a/index.html
+++ b/index.html
@@ -25,166 +25,78 @@
             <div class="content">
                 <div class="con-left-duo">
                     <div class="con-left">
-                        <div class="con-left-con">
-                            <div class="suoshu">
-                                <span>小茶&nbsp;&nbsp;</span>
-                                <span>&nbsp;&nbsp;2018-05-03 22:22:22</span>
+                        <div class="con-left-title">
+                            <span>
+                                <<<<<<</span> &nbsp;&nbsp;&nbsp;&nbsp; <span>首页
+                            </span>
+                        </div>
+                        <div class="con-left-cons">
+                            <div class="con-left-con">
+                                <div class="suoshu">
+                                    <span>小茶&nbsp;&nbsp;</span>
+                                    <span>&nbsp;&nbsp;2018-05-03 22:22:22</span>
+                                </div>
+                                <div class="zhucon">
+                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这里是杀戒看到啥健康的很快就安居客啥叫杀手锏的打实打实大苏打实打实大苏打发...
+                                </div>
+                                <div class="other">
+                                    <p>分类:红袖添香</p>
+                                    <p>
+                                        <span>点赞(100)&nbsp;&nbsp;</span>
+                                        <span>&nbsp;&nbsp;评论(100)</span>
+                                    </p>
+                                </div>
                             </div>
-                            <div class="zhucon">
-                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这里是文字记录的主要内容大撒大撒大苏打倒萨大大加快大厦抠脚大汉洒家扩大红军撒谎的艰苦撒旦户籍卡说的话氨基酸看到哈师大京卡是大戟科撒谎就大开杀戒看到啥健康的很快就安居客啥叫杀手锏的打实打实大苏打实打实大苏打发...
+                            <div class="con-left-con">
+                                <div class="suoshu">
+                                    <span>小茶&nbsp;&nbsp;</span>
+                                    <span>&nbsp;&nbsp;2018-05-03 22:22:22</span>
+                                </div>
+                                <div class="zhucon">
+                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这里是文字大开杀戒看到啥健康的很快就安居客啥叫杀手锏的打实打实大苏打实打实大苏打发...
+                                </div>
+                                <div class="other">
+                                    <p>分类:红袖添香</p>
+                                    <p>
+                                        <span>点赞(100)&nbsp;&nbsp;</span>
+                                        <span>&nbsp;&nbsp;评论(100)</span>
+                                    </p>
+                                </div>
                             </div>
-                            <div class="other">
-                                <p>分类:红袖添香</p>
-                                <p>
-                                    <span>点赞(100)&nbsp;&nbsp;</span>
-                                    <span>&nbsp;&nbsp;评论(100)</span>
-                                </p>
+                            <div class="con-left-con">
+                                <div class="suoshu">
+                                    <span>小茶&nbsp;&nbsp;</span>
+                                    <span>&nbsp;&nbsp;2018-05-03 22:22:22</span>
+                                </div>
+                                <div class="zhucon">
+                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这里是文字记录的主要内容大撒大撒大苏打倒萨大大加快大厦抠脚大汉洒家扩大红军撒谎的艰苦撒旦户籍卡说的话氨基酸看到哈师大京卡是大戟科撒谎就大开杀戒看到啥健康的很快就安居客啥叫杀手锏的打实打实大苏打实打实大苏打发...
+                                </div>
+                                <div class="other">
+                                    <p>分类:红袖添香</p>
+                                    <p>
+                                        <span>点赞(100)&nbsp;&nbsp;</span>
+                                        <span>&nbsp;&nbsp;评论(100)</span>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="con-left-con">
+                                <div class="suoshu">
+                                    <span>小茶&nbsp;&nbsp;</span>
+                                    <span>&nbsp;&nbsp;2018-05-03 22:22:22</span>
+                                </div>
+                                <div class="zhucon">
+                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这里是文字大大加快大厦抠脚大汉洒家扩大红军撒谎的艰苦撒旦户籍卡说的话氨基酸看到哈师大京卡是大戟科撒谎就大开杀戒看到啥健康的很快就安居客啥叫杀手锏的打实打实大苏打实打实大苏打发...
+                                </div>
+                                <div class="other">
+                                    <p>分类:红袖添香</p>
+                                    <p>
+                                        <span>点赞(100)&nbsp;&nbsp;</span>
+                                        <span>&nbsp;&nbsp;评论(100)</span>
+                                    </p>
+                                </div>
                             </div>
                         </div>
-                        <div class="con-left-con">
-                            <div class="suoshu">
-                                <span>小茶&nbsp;&nbsp;</span>
-                                <span>&nbsp;&nbsp;2018-05-03 22:22:22</span>
-                            </div>
-                            <div class="zhucon">
-                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这里是文字记录的主要内容大撒大撒大苏打倒萨大大加快大厦抠脚大汉洒家扩大红军撒谎的艰苦撒旦户籍卡说的话氨基酸看到哈师大京卡是大戟科撒谎就大开杀戒看到啥健康的很快就安居客啥叫杀手锏的打实打实大苏打实打实大苏打发...
-                            </div>
-                            <div class="other">
-                                <p>分类:红袖添香</p>
-                                <p>
-                                    <span>点赞(100)&nbsp;&nbsp;</span>
-                                    <span>&nbsp;&nbsp;评论(100)</span>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="con-left-con">
-                            <div class="suoshu">
-                                <span>小茶&nbsp;&nbsp;</span>
-                                <span>&nbsp;&nbsp;2018-05-03 22:22:22</span>
-                            </div>
-                            <div class="zhucon">
-                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这里是文字记录的主要内容大撒大撒大苏打倒萨大大加快大厦抠脚大汉洒家扩大红军撒谎的艰苦撒旦户籍卡说的话氨基酸看到哈师大京卡是大戟科叫杀手锏的打实打实大苏打实打实大苏打发...
-                            </div>
-                            <div class="other">
-                                <p>分类:红袖添香</p>
-                                <p>
-                                    <span>点赞(100)&nbsp;&nbsp;</span>
-                                    <span>&nbsp;&nbsp;评论(100)</span>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="con-left-con">
-                            <div class="suoshu">
-                                <span>小茶&nbsp;&nbsp;</span>
-                                <span>&nbsp;&nbsp;2018-05-03 22:22:22</span>
-                            </div>
-                            <div class="zhucon">
-                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这里是文快就安居客啥叫杀手锏的打实打实大苏打实打实大苏打发...
-                            </div>
-                            <div class="other">
-                                <p>分类:红袖添香</p>
-                                <p>
-                                    <span>点赞(100)&nbsp;&nbsp;</span>
-                                    <span>&nbsp;&nbsp;评论(100)</span>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="con-left-con">
-                            <div class="suoshu">
-                                <span>小茶&nbsp;&nbsp;</span>
-                                <span>&nbsp;&nbsp;2018-05-03 22:22:22</span>
-                            </div>
-                            <div class="zhucon">
-                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这里是文字记录的主要内容大撒大撒大苏打倒萨大大加快大厦抠脚大汉洒家扩大红军撒谎的艰苦撒旦户籍卡说的话氨基酸看到哈师大京卡是大戟科撒谎就
-                            </div>
-                            <div class="other">
-                                <p>分类:红袖添香</p>
-                                <p>
-                                    <span>点赞(100)&nbsp;&nbsp;</span>
-                                    <span>&nbsp;&nbsp;评论(100)</span>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="con-left-con">
-                            <div class="suoshu">
-                                <span>小茶&nbsp;&nbsp;</span>
-                                <span>&nbsp;&nbsp;2018-05-03 22:22:22</span>
-                            </div>
-                            <div class="zhucon">
-                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这里是文字记录到啥健康的很快就安居客啥叫杀手锏的打实打实大苏打实打实大苏打发...
-                            </div>
-                            <div class="other">
-                                <p>分类:红袖添香</p>
-                                <p>
-                                    <span>点赞(100)&nbsp;&nbsp;</span>
-                                    <span>&nbsp;&nbsp;评论(100)</span>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="con-left-con">
-                            <div class="suoshu">
-                                <span>小茶&nbsp;&nbsp;</span>
-                                <span>&nbsp;&nbsp;2018-05-03 22:22:22</span>
-                            </div>
-                            <div class="zhucon">
-                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这里是杀戒看到啥健康的很快就安居客啥叫杀手锏的打实打实大苏打实打实大苏打发...
-                            </div>
-                            <div class="other">
-                                <p>分类:红袖添香</p>
-                                <p>
-                                    <span>点赞(100)&nbsp;&nbsp;</span>
-                                    <span>&nbsp;&nbsp;评论(100)</span>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="con-left-con">
-                            <div class="suoshu">
-                                <span>小茶&nbsp;&nbsp;</span>
-                                <span>&nbsp;&nbsp;2018-05-03 22:22:22</span>
-                            </div>
-                            <div class="zhucon">
-                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这里是文字大开杀戒看到啥健康的很快就安居客啥叫杀手锏的打实打实大苏打实打实大苏打发...
-                            </div>
-                            <div class="other">
-                                <p>分类:红袖添香</p>
-                                <p>
-                                    <span>点赞(100)&nbsp;&nbsp;</span>
-                                    <span>&nbsp;&nbsp;评论(100)</span>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="con-left-con">
-                            <div class="suoshu">
-                                <span>小茶&nbsp;&nbsp;</span>
-                                <span>&nbsp;&nbsp;2018-05-03 22:22:22</span>
-                            </div>
-                            <div class="zhucon">
-                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这里是文字记录的主要内容大撒大撒大苏打倒萨大大加快大厦抠脚大汉洒家扩大红军撒谎的艰苦撒旦户籍卡说的话氨基酸看到哈师大京卡是大戟科撒谎就大开杀戒看到啥健康的很快就安居客啥叫杀手锏的打实打实大苏打实打实大苏打发...
-                            </div>
-                            <div class="other">
-                                <p>分类:红袖添香</p>
-                                <p>
-                                    <span>点赞(100)&nbsp;&nbsp;</span>
-                                    <span>&nbsp;&nbsp;评论(100)</span>
-                                </p>
-                            </div>
-                        </div>
-                        <div class="con-left-con">
-                            <div class="suoshu">
-                                <span>小茶&nbsp;&nbsp;</span>
-                                <span>&nbsp;&nbsp;2018-05-03 22:22:22</span>
-                            </div>
-                            <div class="zhucon">
-                                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这里是文字大大加快大厦抠脚大汉洒家扩大红军撒谎的艰苦撒旦户籍卡说的话氨基酸看到哈师大京卡是大戟科撒谎就大开杀戒看到啥健康的很快就安居客啥叫杀手锏的打实打实大苏打实打实大苏打发...
-                            </div>
-                            <div class="other">
-                                <p>分类:红袖添香</p>
-                                <p>
-                                    <span>点赞(100)&nbsp;&nbsp;</span>
-                                    <span>&nbsp;&nbsp;评论(100)</span>
-                                </p>
-                            </div>
-                        </div>
+
                     </div>
                     <div class="M-box1 m-style">
                     </div>
@@ -215,7 +127,7 @@
                         </div>
                         <div class="con-right-hottest con-right-css">
                             <div class="con-right-all">
-                                <div class="con-right-tou"><span>最热的记忆>>></span></div>
+                                <div class="con-right-tou"><span>推荐的记忆>>></span></div>
                                 <div class="con-right-nr">
                                     <p><span>dfddfsdf</span></p>
                                     <p><span>dfddfsdf</span></p>
@@ -264,9 +176,10 @@
 
 </html>
 <script src="/static/jquery-1.12.4.js"></script>
+<script src="/static/jquery.cookie.js"></script>
 <script src="/static/common/js/common.js"></script>
 <script src="/static/jquery.pagination.js"></script>
 <script src="/static/home/js/index.js"></script>
 <script>
-    
+
 </script>
