--- a/index.html
+++ b/index.html
@@ -31,111 +31,39 @@
                             </span>
                         </div>
                         <div class="con-left-cons">
-                            <div class="con-left-con">
-                                <div class="suoshu">
-                                    <span>小茶&nbsp;&nbsp;</span>
-                                    <span>&nbsp;&nbsp;2018-05-03 22:22:22</span>
-                                </div>
-                                <div class="zhucon">
-                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这里是杀戒看到啥健康的很快就安居客啥叫杀手锏的打实打实大苏打实打实大苏打发...
-                                </div>
-                                <div class="other">
-                                    <p>分类:红袖添香</p>
-                                    <p>
-                                        <span>点赞(100)&nbsp;&nbsp;</span>
-                                        <span>&nbsp;&nbsp;评论(100)</span>
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="con-left-con">
-                                <div class="suoshu">
-                                    <span>小茶&nbsp;&nbsp;</span>
-                                    <span>&nbsp;&nbsp;2018-05-03 22:22:22</span>
-                                </div>
-                                <div class="zhucon">
-                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这里是文字大开杀戒看到啥健康的很快就安居客啥叫杀手锏的打实打实大苏打实打实大苏打发...
-                                </div>
-                                <div class="other">
-                                    <p>分类:红袖添香</p>
-                                    <p>
-                                        <span>点赞(100)&nbsp;&nbsp;</span>
-                                        <span>&nbsp;&nbsp;评论(100)</span>
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="con-left-con">
-                                <div class="suoshu">
-                                    <span>小茶&nbsp;&nbsp;</span>
-                                    <span>&nbsp;&nbsp;2018-05-03 22:22:22</span>
-                                </div>
-                                <div class="zhucon">
-                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这里是文字记录的主要内容大撒大撒大苏打倒萨大大加快大厦抠脚大汉洒家扩大红军撒谎的艰苦撒旦户籍卡说的话氨基酸看到哈师大京卡是大戟科撒谎就大开杀戒看到啥健康的很快就安居客啥叫杀手锏的打实打实大苏打实打实大苏打发...
-                                </div>
-                                <div class="other">
-                                    <p>分类:红袖添香</p>
-                                    <p>
-                                        <span>点赞(100)&nbsp;&nbsp;</span>
-                                        <span>&nbsp;&nbsp;评论(100)</span>
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="con-left-con">
-                                <div class="suoshu">
-                                    <span>小茶&nbsp;&nbsp;</span>
-                                    <span>&nbsp;&nbsp;2018-05-03 22:22:22</span>
-                                </div>
-                                <div class="zhucon">
-                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;这里是文字大大加快大厦抠脚大汉洒家扩大红军撒谎的艰苦撒旦户籍卡说的话氨基酸看到哈师大京卡是大戟科撒谎就大开杀戒看到啥健康的很快就安居客啥叫杀手锏的打实打实大苏打实打实大苏打发...
-                                </div>
-                                <div class="other">
-                                    <p>分类:红袖添香</p>
-                                    <p>
-                                        <span>点赞(100)&nbsp;&nbsp;</span>
-                                        <span>&nbsp;&nbsp;评论(100)</span>
-                                    </p>
-                                </div>
-                            </div>
+                            <img src="/static/common/img/timg.gif" alt="">
                         </div>
 
                     </div>
-                    <div class="M-box1 m-style">
+                    <div class="M-box1 m-style index-box">
                     </div>
                 </div>
                 <div class="con-right">
                     <div class="con-right-con">
-                        <div class="con-right-edit">
-                            <p>
-                                <textarea class="inputmind" style="resize:none;" placeholder="最多可输入100字"></textarea>
-                            </p>
-                            <p>
-                                <div class="pubtext">发表</div>
-                            </p>
+                        <div class="con-right-my">
+                            <div class="my-some-title">个人作品>>></div>
+                            <div class="my-some-files">
+                                    <p><span title="xzczxc">发生发生当时的撒打算...</span></p>
+                            </div>
+                            
                         </div>
                         <div class="con-right-latest con-right-css">
                             <div class="con-right-all">
                                 <div class="con-right-tou"><span>最新的记忆>>></span></div>
-                                <div class="con-right-nr">
-                                    <p><span>这是最新的里面所暗藏的...</span></p>
-                                    <p><span>dfddfsdf</span></p>
-                                    <p><span>dfddfsdf</span></p>
-                                    <p><span>dfddfsdf</span></p>
-                                    <p><span>dfddfsdf</span></p>
-                                    <p><span>dfddfsdf</span></p>
+                                <div class="con-right-nr con-right-new">
+                                    <img src="/static/common/img/timg.gif" alt="" style="width:200px; height:200px;">
                                 </div>
+                                <div class="M-box1 m-style m-style-right new-box"></div>
                             </div>
 
                         </div>
                         <div class="con-right-hottest con-right-css">
                             <div class="con-right-all">
                                 <div class="con-right-tou"><span>推荐的记忆>>></span></div>
-                                <div class="con-right-nr">
-                                    <p><span>dfddfsdf</span></p>
-                                    <p><span>dfddfsdf</span></p>
-                                    <p><span>dfddfsdf</span></p>
-                                    <p><span>dfddfsdf</span></p>
-                                    <p><span>dfddfsdf</span></p>
-                                    <p><span>dfddfsdf</span></p>
+                                <div class="con-right-nr con-right-rec">
+                                    <img src="/static/common/img/timg.gif" alt="" style="width:200px; height:200px;">
                                 </div>
+                                <div class="M-box1 m-style m-style-right rec-box"></div>
                             </div>
 
                         </div>
