增加我的作品显示

--- a/index.html
+++ b/index.html
@@ -40,12 +40,15 @@
                 </div>
                 <div class="con-right">
                     <div class="con-right-con">
-                        <div class="con-right-my">
-                            <div class="my-some-title">个人作品>>></div>
-                            <div class="my-some-files">
-                                    <p><span title="xzczxc">发生发生当时的撒打算...</span></p>
+                        <div class="con-right-my con-right-css">
+                            <div class="con-right-all">
+                                <div class="my-some-title">我的作品>>></div>
+                                <div class="con-right-nr con-right-myself">
+                                    <img src="/static/common/img/timg.gif" alt="" style="width:200px; height:200px;">
+                                </div>
+                                <div class="M-box1 m-style m-style-right my-box"></div>
                             </div>
-                            
+
                         </div>
                         <div class="con-right-latest con-right-css">
                             <div class="con-right-all">
