--- a/head.html
+++ b/head.html
@@ -91,6 +91,7 @@
                     $.cookie('real-home-token', data.data.token);
                     $(".imghead").attr("isClick",'true');
                     $("#bgsub").hide();
+                    myContent();
                 } else {
                     alert(data.message);
                 }
@@ -104,6 +105,7 @@
     $(".loginOut").click(function () {
         $.cookie('real-home-token', '');
         $(".imghead").attr("isClick",'false');
+        $(".con-right-my").html('<div class="con-right-all"><div class="my-some-title">我的作品>>></div><div class="con-right-nr con-right-myself"><img src="/static/common/img/timg.gif" alt="" style="width:200px; height:200px;"></div><div class="M-box1 m-style m-style-right my-box"></div></div>');
         alert('退出成功');
     });
 </script>
