--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                                 <div class="my-some-title">我的作品>>></div>
                                 <div class="con-right-nr con-right-myself">
                                     <img src="/static/common/img/timg.gif" alt="" style="width:200px; height:200px;">
+                                    <p class="submit"><span>请登录。。。</span></p>
                                 </div>
                                 <div class="M-box1 m-style m-style-right my-box"></div>
                             </div>
