主页面相关内容

--- a/head.html
+++ b/head.html
@@ -16,9 +16,9 @@
         <div class='head-img' title='头像名称'>
             <div class="head-mess head-mess-some">
                 <ul>
-                    <li><a href="javascript:void(0);">基本资料</a></li>
-                    <li><a href="javascript:void(0);">文章信息</a></li>
-                    <li><a href="javascript:void(0);">相册信息</a></li>
+                    <li><a href="/home/ziliao.html" target="_blank">基本资料</a></li>
+                    <li><a href="/home/article.html" target="_blank">文章信息</a></li>
+                    <li><a href="/home/photo.html" target="_blank">相册信息</a></li>
                     <li><a href="javascript:void(0);" class="loginOut">退出</a></li>
                 </ul>
             </div>
