--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
         <div id="buttom"></div>
 
     </div>
+    <!-- 登录页面的背景以及内容相关显示 -->
     <div id="bgsub">
         <div class="sub-index">
             <div class="button-close">关闭</div>
@@ -100,6 +101,182 @@
             <div class="sub-bottom">
                 <p class="submitgo">立即登录</p>
                 <p class="submitfog">忘记密码</p>
+            </div>
+
+        </div>
+    </div>
+    <!-- 细节显示记忆评论点赞收藏等相关显示 -->
+    <div id="bgdet">
+        <div class="det-index">
+            <div class="button-close-det">关闭</div>
+            <div class="det-head">
+                <span>分类:红袖添香</span>
+                <span>&nbsp;&nbsp;</span>
+                <span>点赞(100)</span>
+                <span>&nbsp;&nbsp;</span>
+                <span>评论(100)</span>
+                <span>&nbsp;&nbsp;</span>
+                <span>作者:admin</span>
+                <span>&nbsp;&nbsp;</span>
+                <span>时间:2018-10-08 14:00:00</span>
+            </div>
+            <div class="det-mid">
+                <div class="det-mid-left">
+                    <div class="det-mid-content">
+                        <div class="det-mid-text">
+                            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;今天天气不是很好，天空有些阴沉，一片荒凉惨淡，刚刚还下起了蒙蒙细雨。这样的天气，似乎注定会使人觉得无味。想想晚上得知的消息，真的难以入眠今天天气不是很好，天空有些阴沉，一片荒凉惨淡，刚刚还下起了蒙蒙细雨。这样的天气，似乎注定会使人觉得无味。想想晚上得知的消息，真的难以入眠今天天气不是很好，天空有些阴沉，一片荒凉惨淡，刚刚还下起了蒙蒙细雨。这样的天气，似乎注定会使人觉得无味。想想晚上得知的消息，真的难以入眠今天天气不是很好，天空有些阴沉，一片荒凉惨淡，刚刚还下起了蒙蒙细雨。这样的天气，似乎注定会使人觉得无味。想想晚上得知的消息，真的难
+                        </div>
+
+                    </div>
+                    <div class="det-mid-comment">
+                        <div class="comment-texts">
+                            <textarea name="" id="text-comments"></textarea>
+                        </div>
+
+                        <div class="goComment">发表评论</div>
+
+                    </div>
+                </div>
+                <div class="det-mid-right">
+                    <div class="det-mid-right-comments">
+                        <div class="comment-author"><span class="author-comment">小茶</span>评论</div>
+                        <div class="comment-comment">
+                            这是第一条评论dasdaasdsadasdasdsadasd
+                        </div>
+                        <div class="comment-replys">
+                            <div class="comment-reply">
+                                <div>
+                                    <span>小三</span>回复<span>小茶</span>
+                                </div>
+                                <div class="comment-reply-text">
+                                    第二条评论的回复dasdasdsadsadsadsadas
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="det-mid-right-comments">
+                        <div class="comment-author"><span class="author-comment">小茶</span>评论</div>
+                        <div class="comment-comment">
+                            这是第二条评论
+                        </div>
+                        <div class="comment-replys">
+                            <div class="comment-reply">
+                                <div>
+                                    <span>小三</span>回复<span>小茶</span>
+                                </div>
+                                <div class="comment-reply-text">
+                                    第二条评论的回复dasdasdsadsadsadsadas
+                                </div>
+                            </div>
+                            <div class="comment-reply">
+                                <div>
+                                    <span>小三</span>回复<span>小茶</span>
+                                </div>
+                                <div class="comment-reply-text">
+                                    第二条评论的回复dasdasdsadsadsadsadas
+                                </div>
+                            </div>
+                            <div class="comment-reply">
+                                <div>
+                                    <span>小三</span>回复<span>小茶</span>
+                                </div>
+                                <div class="comment-reply-text">
+                                    第二条评论的回复dasdasdsadsadsadsadas
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <div class="det-mid-right-comments">
+                        <div class="comment-author"><span class="author-comment">小茶</span>评论</div>
+                        <div class="comment-comment">
+                            这是第三条评论
+                        </div>
+                        <div class="comment-replys">
+                            <div class="comment-reply">
+                                <div>
+                                    <span>小三</span>回复<span>小茶</span>
+                                </div>
+                                <div class="comment-reply-text">
+                                    第二条评论的回复dasdasdsadsadsadsadas
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="det-mid-right-comments">
+                        <div class="comment-author"><span class="author-comment">小茶</span>评论</div>
+                        <div class="comment-comment">
+                            这是第二条评论
+                        </div>
+                        <div class="comment-replys">
+                            <div class="comment-reply">
+                                <div>
+                                    <span>小三</span>回复<span>小茶</span>
+                                </div>
+                                <div class="comment-reply-text">
+                                    第二条评论的回复dasdasdsadsadsadsadas
+                                </div>
+                            </div>
+                            <div class="comment-reply">
+                                <div>
+                                    <span>小三</span>回复<span>小茶</span>
+                                </div>
+                                <div class="comment-reply-text">
+                                    第二条评论的回复dasdasdsadsadsadsadas
+                                </div>
+                            </div>
+                            <div class="comment-reply">
+                                <div>
+                                    <span>小三</span>回复<span>小茶</span>
+                                </div>
+                                <div class="comment-reply-text">
+                                    第二条评论的回复dasdasdsadsadsadsadas
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <div class="det-mid-right-comments">
+                        <div class="comment-author"><span class="author-comment">小茶</span>评论</div>
+                        <div class="comment-comment">
+                            这是第二条评论
+                        </div>
+                        <div class="comment-replys">
+                            <div class="comment-reply">
+                                <div>
+                                    <span>小三</span>回复<span>小茶</span>
+                                </div>
+                                <div class="comment-reply-text">
+                                    第二条评论的回复dasdasdsadsadsadsadas
+                                </div>
+                            </div>
+                            <div class="comment-reply">
+                                <div>
+                                    <span>小三</span>回复<span>小茶</span>
+                                </div>
+                                <div class="comment-reply-text">
+                                    第二条评论的回复dasdasdsadsadsadsadas
+                                </div>
+                            </div>
+                            <div class="comment-reply">
+                                <div>
+                                    <span>小三</span>回复<span>小茶</span>
+                                </div>
+                                <div class="comment-reply-text">
+                                    第二条评论的回复dasdasdsadsadsadsadas
+                                </div>
+                            </div>
+
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="det-bottom">
             </div>
 
         </div>
