增加个人中心一部分页面

--- a/foot.html
+++ b/foot.html
@@ -4,7 +4,7 @@
             <div class='banttt bant1'>
                 <a href='javascript:void(0);'>
                     <h1>
-                        <img src='static/common/img/foot.png' />
+                        <img src='/static/common/img/foot.png' />
                     </h1>
                 </a>
             </div>
@@ -29,7 +29,7 @@
             <div class='banttt bant3'>
                 <div class='guanzhu'>
                     <div class='guanwo'>关注我们：</div>
-                    <img src="static/common/img/weixin.png" alt=''>
+                    <img src="/static/common/img/weixin.png" alt=''>
                 </div>
             </div>
         </div>
@@ -56,7 +56,7 @@
                         <a href='javascript:void(0);'>站长之家</a>
                     </li>
                     <li>
-                        <a href='admin/index/login.html'>管理员</a>
+                        <a href='javascript:void(0);'>管理员</a>
                     </li>
                 </ul>
             </div>
