--- a/home/all.html
+++ b/home/all.html
@@ -12,17 +12,45 @@
 </head>
 
 <body>
+    <script src="/static/jquery-1.12.4.js"></script>
+    <script src="/static/jquery.cookie.js"></script>
+    <script src="/static/jquery.pagination.js"></script>
     <div id="abox">
         <div class="atop">
         </div>
         <div class="amid">
 
             <div class="amid-left">
-                dasdsa
+                <div class="amid-left-top">
+                    <div class="left-top-img">
+                        <img src="/static/home/img/admin-tou.jpg" alt="" title='头像' class="img-tou">
+                    </div>
+                    <div class="left-top-mess">
+                        <p>账&nbsp;&nbsp;&nbsp;&nbsp;号:<span>admin</span></p>
+                        <p>用户名:<span>admin</span></p>
+                        <p>性&nbsp;&nbsp;&nbsp;&nbsp;别:<span>admin</span></p>
+                        <p>年&nbsp;&nbsp;&nbsp;&nbsp;龄:<span>admin</span></p>
+                    </div>
+                </div>
+                <hr>
+                <div class="amid-left-content">
+                    <div class="amid-left-titles">
+                        <p>>>>All Things</p>
+                    </div>
+                    <div class="amid-left-lis">
+                            <p class="amid-p" val='0'>首页展示</p>
+                            <p class="amid-p" val='1'>个人资料</p>
+                            <p class="amid-p" val='2'>文章相关</p>
+                            <p class="amid-p" val='3'>图片相关</p>
+                            <p class="amid-p" val='4'>信息相关</p>
+                            <p class="amid-p" val='5'>其他</p>
+                    </div>
+
+                </div>
             </div>
             <div class="amid-right">
                 <div class="amid-right-content">
-                    
+
                 </div>
             </div>
         </div>
@@ -34,10 +62,7 @@
 </body>
 
 </html>
-<script src="/static/jquery-1.12.4.js"></script>
-<!-- <script src="/static/jquery.cookie.js"></script> -->
 <script src="/static/common/js/common.js"></script>
-<script src="/static/jquery.pagination.js"></script>
 <script src="/static/home/js/index.js"></script>
 <script src="/static/home/js/all.js"></script>
 <script>
