--- a/home/tj.html
+++ b/home/tj.html
@@ -1,3 +1,27 @@
-<div>
-    首页
+<div class="tjshouye">
+    <div class="tj-top">
+        <div class="tj-top-title">
+            <span>首页显示>>></span>
+        </div>
+        <div class="tj-top-ls">
+            <ul>
+                <li>
+                    <span>文章：</span>
+                    <span>1000</span>
+                </li>
+                <li>
+                    <span>点赞：</span>
+                    <span>1000</span>
+                </li>
+                <li>
+                    <span>评论：</span>
+                    <span>1000</span>
+                </li>
+            </ul>
+
+        </div>
+
+    </div>
+    <div class="tj-mid"></div>
+    <div class="tj-foot"></div>
 </div>
