--- a/home/zl.html
+++ b/home/zl.html
@@ -1,1 +1,36 @@
-<div>这是资料</div>
+<div class="zlshow">
+    <div class="zlcontent">
+        <p>
+            <span>账号</span>
+            <span>admin</span>
+        </p>
+        <p>
+            <span>名称</span>
+            <input type="text" name="" id="name">
+        </p>
+        <p>
+            <span>性别</span>
+            <input type="text" name="" id="sex">
+        </p>
+        <p>
+            <span>年龄</span>
+            <input type="text" name="" id="age">
+        </p>
+        <p>
+            <span>手机</span>
+            <input type="text" name="" id="iphone">
+        </p>
+        <p>
+            <span>邮箱</span>
+            <input type="text" name="" id="email">
+        </p>
+        <p>
+            <span>生日</span>
+            <input type="text" name="" id="birth">
+        </p>
+        <p>
+            <span>简介</span>
+            <input type="text" name="" id="desc">
+        </p>
+    </div>
+</div>
